--- a/src/tag.css
+++ b/src/tag.css
@@ -25,8 +25,9 @@
 	padding-right: 1.5em;
 }
 
-.tags-container .tag.selected {
+.tags-container .tag:focus {
 	background-color: gray;
+	outline: none;
 }
 
 .tags-container input {
