--- a/src/tag.css
+++ b/src/tag.css
@@ -25,9 +25,8 @@
 	padding-right: 1.5em;
 }
 
-.tags-container .tag:focus {
+.tags-container .tag.selected {
 	background-color: gray;
-	outline: none;
 }
 
 .tags-container input {
