Capturing events on the tags container so that there is no need for the focus to stay on the input

--- a/src/tag.css
+++ b/src/tag.css
@@ -5,6 +5,10 @@
 	border-radius: 3px;
 }
 
+.tags-container:focus {
+	outline: none;
+}
+
 .tags-container .tags {
 	list-style: none;
 	margin: 0.5em 0.5em 0;
