--- a/src/tag.css
+++ b/src/tag.css
@@ -27,6 +27,10 @@
 	border-radius: 3px;
 	position: relative;
 	padding-right: 1.5em;
+	max-width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .tags-container .tag.selected {
